Python第五轮再改

--- a/catchat/catchat/templates/access.html
+++ b/catchat/catchat/templates/access.html
@@ -46,9 +46,9 @@
         </div>
         <div class="btn_sign"><button class="btn_sign_in">sign up</button></div>
         <span class="way">其他注册方式</span>
-        <img class="img11" src="static/imgs/img11.jpeg" height="54" width="52"/>
-        <img class="img12" src="static/imgs/img12.jpeg" height="50" width="50"/>
-        <img class="img13" src="static/imgs/img13.jpeg" height="52" width="55"/>
+        <img class="img11" src="static/imgs/img11.png" height="54" width="52"/>
+        <img class="img12" src="static/imgs/img12.png" height="50" width="50"/>
+        <img class="img13" src="static/imgs/img13.png" height="52" width="55"/>
         </form>
         </div>
         <div id="form2">
@@ -63,9 +63,9 @@
             </div>
             <div class="btn_sign"><button class="btn_sign_in">sign up</button></div>
             <span class="way">其他登录方式</span>
-            <img class="img11" src="static/imgs/img11.jpeg" height="54" width="52"/>
-            <img class="img12" src="static/imgs/img12.jpeg" height="50" width="50"/>
-            <img class="img13" src="static/imgs/img13.jpeg" height="52" width="55"/>
+            <img class="img11" src="static/imgs/img11.png" height="54" width="52"/>
+            <img class="img12" src="static/imgs/img12.png" height="50" width="50"/>
+            <img class="img13" src="static/imgs/img13.png" height="52" width="55"/>
         </form>
         </div>
     </div>
