--- a/catchat/catchat/templates/creategroup.html
+++ b/catchat/catchat/templates/creategroup.html
@@ -8,7 +8,7 @@
 <body>
 <div id="menu_block">
     <img id="img1" src="/static/imgs/img1.png" height="65" width="62"/>
-    <img id="img19" src="/static/imgs/img19.jpg" height="35" width="35"/>
+    <img id="img19" src="/static/imgs/img19.png" height="35" width="35"/>
     <img id="img4" src="/static/imgs/img4.png" height="50" width="30"/>
     <img id="img3" src="/static/imgs/img3.png" height="30" width="30"/>
     <img id="img2" src="/static/imgs/img2.png" height="30" width="40"/>
@@ -17,7 +17,7 @@
     <h1>Create group</h1>
     <input  placeholder="Search for messages or users...">
     <span>
-        <img id="img17" src="/static/imgs/img17.jpg" height="34" width="28"/>
+        <img id="img17" src="/static/imgs/img17.png" height="34" width="28"/>
     </span>
 </div>
 <div id="sign_in" >
