--- a/catchat/catchat/templates/profile.html
+++ b/catchat/catchat/templates/profile.html
@@ -9,7 +9,7 @@
 <div id="menu_block">
     <div id="menu">
         <img id="img1" src="/static/imgs/img1.png" height="65" width="62"/>
-        <img id="img19" src="/static/imgs/img19.jpg" height="35" width="35"/>
+        <img id="img19" src="/static/imgs/img19.png" height="35" width="35"/>
         <img id="img4" src="/static/imgs/img4.png" height="50" width="30"/>
         <img id="img3" src="/static/imgs/img3.png" height="30" width="30"/>
         <img id="img2" src="/static/imgs/img2.png" height="30" width="40"/>
@@ -21,7 +21,7 @@
     <input placeholder="   Search for messages or users..."  name="room_url">
     <button id="btn">search</button>
     </form>>
-    <img id="img17" src="../static/imgs/img17.jpg" height="38" width="34"/>
+    <img id="img17" src="../static/imgs/img17.png" height="38" width="34"/>
     <div id="photo_name">
         <div id="photo"></div>
         <div id="name"></div>
